--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Mag's cRib - Music Player</title>
+  <link rel="stylesheet" href="music-player.css" />
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="music-player.js"></script>
+</body>
+</html>
