--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="music-player.css">
+  <meta charset="UTF-8">
+  <title>Mag's cRib - Music Player</title>
+  <link rel="stylesheet" href="magscrib-musicplayer/music-player.css">
 </head>
 <body>
   <div id="player"></div>
-
-  <script src="music-player.js"></script>
+  <script src="magscrib-musicplayer/music-player.js"></script>
 </body>
 </html>
