--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="magscrib-musicplayer/music-player.css">
 </head>
 <body>
-  <div id="player"></div>
+  <div id="root"></div>
   <script src="magscrib-musicplayer/music-player.js"></script>
 </body>
 </html>
