--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Mag's cRib - Music Player</title>
-  <link rel="stylesheet" href="magscrib-musicplayer/music-player.css">
+  <link rel="stylesheet" href="music-player.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="magscrib-musicplayer/music-player.js"></script>
+  <script src="music-player.js"></script>
 </body>
 </html>
